fixing whitespace

--- a/homepage.css
+++ b/homepage.css
@@ -1,6 +1,3 @@
-*{
-border: 1px solid red;
-}
 
 body{
 padding: 0;
